@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c: Make converters that increase value non-functional.
+Andreas Kirschbaum 2005-07-17
+
 server/{monster.c, pets.c}: Fixed bug in previous commit of arena petmode
    that cause pets that should be friendly to eachother to fight.
 Alex Schultz 2005-07-16
